--- a/roles/chrony/defaults/main.yml
+++ b/roles/chrony/defaults/main.yml
@@ -1,5 +1,5 @@
-# 设置时间源服务器
+# Set up the time source server
 ntp_server: "ntp1.aliyun.com"
 
-# 设置允许内部时间同步的网络段，比如"10.0.0.0/8"，默认全部允许
+# Network segment that allows synchronization example:"10.0.0.0/8"，default: allow all
 local_network: "0.0.0.0/0"
