--- a/roles/init/task/main.yml
+++ b/roles/init/task/main.yml
@@ -7,3 +7,15 @@
 
 - import_tasks: centos.yml
   when: ansible_distribution == "CentOS"
+
+- name: Optimize sshd
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    regexp: "UseDNS"
+    line: "UseDNS no"
+  
+- name: Optimize sshd
+  lineinfile:
+    dest: /etc/ssh/sshd_config
+    regexp: "GSSAPIAuthentication"
+    line: "GSSAPIAuthentication no"
