--- a/roles/init/task/main.yml
+++ b/roles/init/task/main.yml
@@ -19,3 +19,35 @@
     dest: /etc/ssh/sshd_config
     regexp: "GSSAPIAuthentication"
     line: "GSSAPIAuthentication no"
+
+- name: sshd restart
+  service: name=sshd state=restarted 
+
+- name: prepare some dirs
+  file: name={{ item }} state=directory
+  with_items:
+  - "{{ bin_dir }}"
+  - "{{ ca_dir }}"
+  - /root/.kube
+
+- name: 下载证书工具 CFSSL和 kubectl
+  copy: src={{ base_dir }}/bin/{{ item }} dest={{ bin_dir }}/{{ item }} mode=0755
+  with_items:
+  - cfssl
+  - cfssl-certinfo
+  - cfssljson
+  - kubectl
+  tags: upgrade_k8s
+
+- name: 分发 kubeconfig配置文件
+  synchronize: src=/root/.kube/config dest=/root/.kube/config
+  delegate_to: "{{ groups.deploy[0] }}"
+
+- name: 分发 CA 证书
+  synchronize: src={{ ca_dir }}/{{ item }} dest={{ ca_dir }}/{{ item }}
+  with_items:
+  - ca.pem
+  - ca-key.pem
+  - ca.csr
+  - ca-config.json
+  delegate_to: "{{ groups.deploy[0] }}"
