--- a/01.init_system.yml
+++ b/01.init_system.yml
@@ -1,4 +1,4 @@
-# Time synchronization
+# Time synchronization #
 - hosts: all
   roles:
   - { role: chrony, when: "hostvars[groups.deploy[0]]['NTP_ENABLED'] == 'yes'" }
